--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,14 +12,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: TODO
-      - name: Upload artifacts to GitHub Action run
-        uses: actions/upload-artifact@v3
+      - run: |
+          mkdir d1
+          echo hi > d1/a.txt
+          mkdir d2
+          echo ha > d2/b.txt
+          ls -al d1
+          ls -al d2
+
+      - uses: actions/upload-artifact@v3
         with:
-          name: TODO
-          path: TODO
-      - name: Upload artifacts to GitHub Release
-        uses: softprops/action-gh-release@v1
+          name: name1
+          path: d1
+      - uses: softprops/action-gh-release@v1
         with:
-          files: TODO
-          tag_name: TODO
+          files: d1
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: name1
+          path: d1
+      - uses: softprops/action-gh-release@v1
+        with:
+          files: d1
