--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,9 @@ jobs:
       - name: Generate release tag
         id: tag
         run: |
-          echo "::set-output name=release_tag::Build_$(date +"%Y.%m.%d_%H-%M-%S")"
+          set -euxo pipefail
+          TAG=Build_$(date +"%Y.%m.%d_%H-%M-%S")
+          echo "release_tag=$TAG" >> $GITHUB_OUTPUT
 
       - uses: actions/upload-artifact@v3
         with:
