--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,8 @@ jobs:
         uses: mxschmitt/action-tmate@v3
         with:
           detached: true
-      - name: Sleep forever
+      - if: ${{ failure() }}
+        name: Sleep forever
         run: sleep 1000000
 
       - run: |
