--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
           cd sdk
           export ASAN_OPTIONS="handle_segv=0:detect_leaks=1:detect_stack_use_after_return=0:disable_coredump=0:abort_on_error=1"
           export ASAN_SYMBOLIZER_PATH="$PWD/buildtools/linux-x64/clang/bin/llvm-symbolizer"
-          ./tools/build.py --mode release --arch x64 --sanitizer asan runtime runtime_precompiled create_sdk
+          ./tools/build.py --no-goma --mode release --arch x64 --sanitizer asan runtime runtime_precompiled create_sdk
           ls -al
 
       - run: |
